// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CopyStatus component renders the component with custom copy text 1`] = `
<div>
  <span
    class="copyStatus"
  >
    Click to copy!
  </span>
</div>
`;

exports[`CopyStatus component renders the component with default copy text 1`] = `
<div>
  <span
    class="copyStatus"
  >
    (click to copy)
  </span>
</div>
`;
